# SSVEntitySystem

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.0000000  CMakeLists.txt.user.5e4d6ab  Component.cpp  Component.h  Entity.cpp  Entity.h  Manager.cpp  Manager.h  SSVEntitySystem.h  SSVEntitySystem.mk  SSVEntitySystem.project  SSVEntitySystem.txt  Utils.cpp  Utils.h
EntitySystem/: Component.cpp  Component.h  Entity.cpp  Entity.h  Manager.cpp  Manager.h  PtrRepository.h  Repository.h
Utils/: Repository.h  Utils.cpp  Utils.h
cmake/Modules/: FindSSVEntitySystem.cmake
cmake/modules/: FindSSVEntitySystem.cmake
include/SSVEntitySystem/: SSVEntitySystem.h  SSVEntitySystem.hpp
include/SSVEntitySystem/Core/: Component.h  Component.hpp  Component.inl  Entity.h  Entity.hpp  Manager.h  Manager.hpp  Manager.inl
include/SSVEntitySystem/Core/Internal/: EntityIdManager.h  EntityIdManager.hpp
include/SSVEntitySystem/Global/: GroupManager.h  Typedefs.h  Typedefs.hpp
include/SSVEntitySystem/Utils/: Repository.h  Utils.h
src/SSVEntitySystem/Core/: Component.cpp  Entity.cpp  Manager.cpp
src/SSVEntitySystem/Utils/: Utils.cpp
